Translate new strings

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -16,9 +16,12 @@
   "assignment.status.performed": "تم أداء الوظيفة",
   "assignment.status.user_company_hire": "الشركة ترغب في توظيفك",
   "assignment.status.you_hired": "لقد تم توظيفك",
+  "basic.chat.messages.empty": "No messages yet",
+  "basic.comments.empty": "No comments yet",
   "button.form.submit.fail": "توجد بعض الأخطاء، يُرجى مراجعتها أعلاه.",
   "button.form.submit.success": "تم بنجاح!",
   "card.document.upload.empty.documents": "فارغ",
+  "chat.form.submit.button": "إرسال",
   "comment.form.submit.button": "إرسال",
   "common.back": "عودة",
   "common.close": "أقفِل",
@@ -106,6 +109,7 @@
   "input.at.und.label": "هل لديك تصريح AT-UND؟ (مسموح بالعمل أثناء اللجوء)",
   "input.bank.account.label": "Swedish bank account (clearing number + account number)",
   "input.bank.account.placeholder": "Bank account",
+  "input.chat.message.placeholder": "Write a message",
   "input.city.label": "المدينة",
   "input.city.placeholder": "المدينة",
   "input.comment.placeholder": "أكتب تعليقك",
@@ -132,6 +136,9 @@
   "input.gender.label": "الجنس",
   "input.gender.placeholder": "الجنس",
   "input.got.coordination.number.label": "هل لديك رقم التنسيق (samordningsnummer)؟",
+  "input.interests.hint": "Please rate how interested you are in the chosen interests",
+  "input.interests.label": "Interests",
+  "input.interests.placeholder": "Interests",
   "input.job.experience.label": "خبرة سنوات العمل",
   "input.job.experience.placeholder": "خبرة سنوات العمل",
   "input.languages.hint": "يرجى تقييم نفسك في أداء اللغات المختارة",
@@ -255,6 +262,7 @@
   "menu.main.profile": "صفحة معلومات شخصية",
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "تقرير الوقت",
+  "menu.main.support.chat": "Chat with Just Arrived",
   "page.not.found.error.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
   "register.form.login.button": "قم بتسجيل الدخول الآن",
@@ -276,6 +284,10 @@
   "skill.proficiency.expert": "خبير ",
   "skill.proficiency.intermediate": "معرفة متوسطة ",
   "skill.proficiency.professional": "محترف ",
+  "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
+  "support.chat.info.message.header": "This is not an instant chat service",
+  "support.chat.page.title": "Chat with Just Arrived",
+  "support.chat.title": "جست أرايفد",
   "terms.frilans_finans.accept": "أنا اوفق على Frilans Finans",
   "terms": "الشروط والأحكام وعقد العمل",
   "user.missing.traits.form.close.button": "أقفِل",
@@ -286,6 +298,7 @@
   "user.missing.traits.message.header": "We are interested in you",
   "user.profile.form.education.section.header": "دراسة",
   "user.profile.form.general.skills.section.header": "مهارات عامة",
+  "user.profile.form.interests.section.header": "Interests",
   "user.profile.form.language.skills.section.header": "معلومات لغوية",
   "user.profile.form.personal.presentation.section.header": "تقديم",
   "user.profile.form.social.network.section.header": "Social networks",
@@ -313,6 +326,7 @@
   "user.update.form.bank.details.header": "معلومات مصرفية",
   "user.update.form.education.section.header": "دراسة",
   "user.update.form.general.skills.section.header": "مهارات عامة",
+  "user.update.form.interests.section.header": "Interests",
   "user.update.form.language.skills.section.header": "معلومات لغوية",
   "user.update.form.personal.info.header": "المعلومات الشخصية",
   "user.update.form.personal.presentation.section.header": "تقديم",
