--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -16,9 +16,12 @@
   "assignment.status.performed": "Uppdrag utfört",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "Du har blivit anställd",
+  "basic.chat.messages.empty": "Inga meddelanden ännu",
+  "basic.comments.empty": "Inga kommentarer ännu",
   "button.form.submit.fail": "Det finns några fel du måste åtgärda ovan.",
   "button.form.submit.success": "Det gick bra!",
   "card.document.upload.empty.documents": "Tomt",
+  "chat.form.submit.button": "Skicka",
   "comment.form.submit.button": "Skicka",
   "common.back": "Tillbaka",
   "common.close": "Stäng",
@@ -106,6 +109,7 @@
   "input.at.und.label": "Har du AT-UND? (Är du tillåten att jobba)",
   "input.bank.account.label": "Svenskt bankkonto (clearing nummer + kontonummer)",
   "input.bank.account.placeholder": "Bankkonto",
+  "input.chat.message.placeholder": "Skriv ett meddelande",
   "input.city.label": "Stad",
   "input.city.placeholder": "Stad",
   "input.comment.placeholder": "Skriv en kommentar",
@@ -132,6 +136,9 @@
   "input.gender.label": "Kön",
   "input.gender.placeholder": "Kön",
   "input.got.coordination.number.label": "Har du ett samordningsnummer?",
+  "input.interests.hint": "Bedöm hur intresserad du är av valda intressen",
+  "input.interests.label": "Intressen",
+  "input.interests.placeholder": "Intressen",
   "input.job.experience.label": "Arbetslivserfarenhet",
   "input.job.experience.placeholder": "Arbetslivserfarenhet",
   "input.languages.hint": "\nBedöm hur bra du är på de valda språken",
@@ -255,6 +262,7 @@
   "menu.main.profile": "Profil",
   "menu.main.register": "Skapa konto",
   "menu.main.staffing_time_report": "Tidsrapportera",
+  "menu.main.support.chat": "Chatta med Just Arrived",
   "page.not.found.error.description": "Vi ber om ursäkt, sidan eller resursen du letar efter finns inte.",
   "page.not.found.error.title": "404 - Sidan kan inte hittas",
   "register.form.login.button": "Logga in nu",
@@ -276,6 +284,10 @@
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Medelkunskap",
   "skill.proficiency.professional": "Professionell",
+  "support.chat.info.message.description": "Tänk på att det kan ta upp till 72 timmar att få svar",
+  "support.chat.info.message.header": "Det här är inte en direktchat",
+  "support.chat.page.title": "Chatta med Just Arrived",
+  "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "regler, villkor och anställningskontrakt",
   "user.missing.traits.form.close.button": "Stäng",
@@ -286,6 +298,7 @@
   "user.missing.traits.message.header": "Vi är intresserade av dig",
   "user.profile.form.education.section.header": "Utbildning",
   "user.profile.form.general.skills.section.header": "Generella kompetenser",
+  "user.profile.form.interests.section.header": "Intressen",
   "user.profile.form.language.skills.section.header": "Språkkunskaper",
   "user.profile.form.personal.presentation.section.header": "Personlig presentation",
   "user.profile.form.social.network.section.header": "Sociala nätverk",
@@ -313,6 +326,7 @@
   "user.update.form.bank.details.header": "Bankuppgifter",
   "user.update.form.education.section.header": "Utbildning",
   "user.update.form.general.skills.section.header": "Generella kompetenser",
+  "user.update.form.interests.section.header": "Intressen",
   "user.update.form.language.skills.section.header": "Språkkunskaper",
   "user.update.form.personal.info.header": "Personlig information",
   "user.update.form.personal.presentation.section.header": "Personlig presentation",
