--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -16,9 +16,12 @@
   "assignment.status.performed": "Job performed",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "You've been hired",
+  "basic.chat.messages.empty": "No messages yet",
+  "basic.comments.empty": "No comments yet",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
+  "chat.form.submit.button": "لیږل",
   "comment.form.submit.button": "لیږل",
   "common.back": "شا ته",
   "common.close": "تړل",
@@ -106,6 +109,7 @@
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.bank.account.label": "Swedish bank account (clearing number + account number)",
   "input.bank.account.placeholder": "Bank account",
+  "input.chat.message.placeholder": "Write a message",
   "input.city.label": "City",
   "input.city.placeholder": "City",
   "input.comment.placeholder": "خپل نظریات ولیکئ",
@@ -132,6 +136,9 @@
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
+  "input.interests.hint": "Please rate how interested you are in the chosen interests",
+  "input.interests.label": "Interests",
+  "input.interests.placeholder": "Interests",
   "input.job.experience.label": "کاري تجربه",
   "input.job.experience.placeholder": "کاري تجربه",
   "input.languages.hint": "Please rate how good you are at the chosen languages",
@@ -255,6 +262,7 @@
   "menu.main.profile": "پروفایل",
   "menu.main.register": "د حساب رامینځته کول",
   "menu.main.staffing_time_report": "Time report",
+  "menu.main.support.chat": "Chat with Just Arrived",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
@@ -276,6 +284,10 @@
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Intermediate knowledge",
   "skill.proficiency.professional": "Professional",
+  "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
+  "support.chat.info.message.header": "This is not an instant chat service",
+  "support.chat.page.title": "Chat with Just Arrived",
+  "support.chat.title": "Just Arrived (جسټ آرایوډ)",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "terms, conditions and employment contract",
   "user.missing.traits.form.close.button": "تړل",
@@ -286,6 +298,7 @@
   "user.missing.traits.message.header": "We are interested in you",
   "user.profile.form.education.section.header": "روزنه",
   "user.profile.form.general.skills.section.header": "General skills",
+  "user.profile.form.interests.section.header": "Interests",
   "user.profile.form.language.skills.section.header": "د ژبې مهارتونه",
   "user.profile.form.personal.presentation.section.header": "Personal presentation",
   "user.profile.form.social.network.section.header": "Social networks",
@@ -313,6 +326,7 @@
   "user.update.form.bank.details.header": "Bankuppgifter",
   "user.update.form.education.section.header": "روزنه",
   "user.update.form.general.skills.section.header": "General skills",
+  "user.update.form.interests.section.header": "Interests",
   "user.update.form.language.skills.section.header": "د ژبې مهارتونه",
   "user.update.form.personal.info.header": "Personal information",
   "user.update.form.personal.presentation.section.header": "Personal presentation",
