Initial god mode version

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,8 +74,13 @@
   "forgot.password.modal.title": "Restore password",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
+  "god.mode.bar.description": "God mode is active! In this mode you can see how the chosen user percieves the application and you may act on the users behalf. You are not allowed to change anything without the consent of the user you are acting as.",
+  "god.mode.change.user.button": "Change user",
+  "god.mode.deactivate.button": "Deactivate",
+  "god.mode.title": "{{numberOfUsers}} Users",
   "home.header.logged.in.jobs.button": "Find jobs",
   "home.header.logged.in.profile.button": "Edit profile",
+  "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
   "home.header.logged.in.title": "Welcome {{username}}!",
   "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "home.header.logged.out.login.button": "Log in",
@@ -256,6 +261,7 @@
   "menu.main.contact": "Contact",
   "menu.main.faq": "Questions and Answers",
   "menu.main.find_assignment": "Find jobs",
+  "menu.main.god.mode": "God mode",
   "menu.main.home": "Home",
   "menu.main.login": "Log in",
   "menu.main.logout": "Log out",
@@ -291,6 +297,7 @@
   "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "I accept Frilans Finans",
   "terms": "terms, conditions and employment contract",
+  "user.card.no.address": "No address",
   "user.missing.traits.form.close.button": "Close",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
   "user.missing.traits.form.information.provided.message.header": "That is awesome!",
@@ -317,7 +324,6 @@
   "user.register.form.submit.button": "Register",
   "user.register.form.terms.section.header": "Terms and conditions",
   "user.register.title": "Register",
-  "user.card.no.address": "No address",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.change.password.header": "Change password",
