--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "god.mode.pager.section.no.users": "No users found",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -75,12 +76,12 @@
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
   "god.mode.bar.description": "God mode is active! In this mode you can see how the chosen user percieves the application and you may act on the users behalf. You are not allowed to change anything without the consent of the user you are acting as.",
+  "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
   "god.mode.change.user.button": "Change user",
   "god.mode.deactivate.button": "Deactivate",
   "god.mode.title": "{{numberOfUsers}} Users",
   "home.header.logged.in.jobs.button": "Find jobs",
   "home.header.logged.in.profile.button": "Edit profile",
-  "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
   "home.header.logged.in.title": "Welcome {{username}}!",
   "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "home.header.logged.out.login.button": "Log in",
@@ -134,6 +135,8 @@
   "input.email.placeholder": "Email",
   "input.facebook.url.label": "Link to your facebook profile",
   "input.facebook.url.placeholder": "Facebook profile",
+  "input.filter.users.label": "Search by",
+  "input.filter.users.placeholder": "Search by",
   "input.first.name.label": "First name",
   "input.first.name.placeholder": "First name",
   "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
@@ -186,6 +189,8 @@
   "input.skills.hint": "Please rate how good you are at the chosen skills",
   "input.skills.label": "Skills",
   "input.skills.placeholder": "Skills",
+  "input.sort.users.label": "Sort on",
+  "input.sort.users.placeholder": "Sort on",
   "input.ssn.label": "Social security number or coordination number",
   "input.ssn.placeholder":  "Social security number or coordination number",
   "input.status.label": "Current status",
@@ -342,6 +347,8 @@
   "user.update.form.social.network.section.header": "Social networks",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Save changes",
+  "users.filter.search.label": "Search users",
+  "users.filter.search.placeholder": "Search users",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
