--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,5 @@
 {
+  "god.mode.pager.section.no.users": "No users found",
   "already.registered.modal.button": "تسجيل الدخول",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -74,6 +75,11 @@
   "forgot.password.modal.title": "استعادة كلمة المرور",
   "forgot.password.submit.error": "للأسف، تعذر إرسال رابط إعادة تعيين كلمة المرور.",
   "forgot.password.title": "استعادة كلمة المرور",
+  "god.mode.bar.description": "God mode is active! In this mode you can see how the chosen user percieves the application and you may act on the users behalf. You are not allowed to change anything without the consent of the user you are acting as.",
+  "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
+  "god.mode.change.user.button": "Change user",
+  "god.mode.deactivate.button": "Deactivate",
+  "god.mode.title": "{{numberOfUsers}} Users",
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
   "home.header.logged.in.profile.button": "تحرير ملف التعريف",
   "home.header.logged.in.title": "مرحبًا {{username}}!",
@@ -129,6 +135,8 @@
   "input.email.placeholder": "بريد إلكتروني",
   "input.facebook.url.label": "Link to your facebook profile",
   "input.facebook.url.placeholder": "Facebook profile",
+  "input.filter.users.label": "Search by",
+  "input.filter.users.placeholder": "Search by",
   "input.first.name.label": "الاسم الصغير",
   "input.first.name.placeholder": "الاسم الصغير",
   "input.frilans.terms.label": "أقبل بشروط وعقود عمل Frilans Finans .",
@@ -181,6 +189,8 @@
   "input.skills.hint": "يرجى تقييم نفسك في أداء المهارات المختارة",
   "input.skills.label": "كفاءات",
   "input.skills.placeholder": "كفاءات",
+  "input.sort.users.label": "Sort on",
+  "input.sort.users.placeholder": "Sort on",
   "input.ssn.label": "رقم الضمان الاجتماعي أو رقم التنسيق",
   "input.ssn.placeholder":  "رقم الضمان الاجتماعي أو رقم التنسيق",
   "input.status.label": "الحالة الحالية",
@@ -227,6 +237,7 @@
   "job.scope.section.header": "Scope",
   "job.scope.section.hours": "{{hours}} الساعات",
   "job.scope.section.netSalary": "{{netSalary}} net salary (after taxes)",
+  "job.scope.section.until.further.notice": "Until further notice",
   "jobs.title": "كل الوظائف ({{nbrOfJobs}})",
   "language.proficiency.basic": "معرفة أساسية ",
   "language.proficiency.beginner": "مبتدئ",
@@ -255,6 +266,7 @@
   "menu.main.contact": "اتصال",
   "menu.main.faq": "أسئلة وأجوبة",
   "menu.main.find_assignment": "إيجاد وظيفة",
+  "menu.main.god.mode": "God mode",
   "menu.main.home": "منزل",
   "menu.main.login": "تسجيل الدخول",
   "menu.main.logout": "تسجيل الخروج",
@@ -290,6 +302,7 @@
   "support.chat.title": "جست أرايفد",
   "terms.frilans_finans.accept": "أنا اوفق على Frilans Finans",
   "terms": "الشروط والأحكام وعقد العمل",
+  "user.card.no.address": "No address",
   "user.missing.traits.form.close.button": "أقفِل",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
   "user.missing.traits.form.information.provided.message.header": "That is awesome!",
@@ -334,6 +347,8 @@
   "user.update.form.social.network.section.header": "Social networks",
   "user.update.form.status.section.header": "الوضع",
   "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
+  "users.filter.search.label": "Search users",
+  "users.filter.search.placeholder": "Search users",
   "validations.email_pattern": "يجب أن يكون عنوان بريد الكتروني صحيح",
   "validations.maxlength": "طويل جدا (الحد الأقصى {{maxLength}} من الأحرف)",
   "validations.minlength": "قصير جدا (الحد الأدنى {{minLength}} من الأحرف)",
