--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,4 +1,5 @@
 {
+  "god.mode.pager.section.no.users": "Inga användare hittades",
   "already.registered.modal.button": "Logga in",
   "already.registered.modal.info": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du glömt ditt lösenord så kan du återställa det genom att klicka på \"Glömt ditt lösenord?\" ovan",
   "already.registered.modal.title": "{{emailOrPhone}} är redan registrerat",
@@ -74,6 +75,11 @@
   "forgot.password.modal.title": "Återställ lösenord",
   "forgot.password.submit.error": "Tyvärr så kunde inte länken för lösenordsåterställning skickas till dig.",
   "forgot.password.title": "Återställ lösenord",
+  "god.mode.bar.description": "Gudläget är aktivt! I detta läge så kan du se hur en vald användare uppfattar applikationen och du kan agera enligt användarens intressen. Du får inte ändra något utan samtycke från användaren du agerar som.",
+  "god.mode.bar.title": "Du agerar som {{firstName}} {{lastName}} med id {{id}}!",
+  "god.mode.change.user.button": "Ändra användare",
+  "god.mode.deactivate.button": "Deaktivera",
+  "god.mode.title": "{{numberOfUsers}} Användare",
   "home.header.logged.in.jobs.button": "Hitta uppdrag",
   "home.header.logged.in.profile.button": "Redigera profil",
   "home.header.logged.in.title": "Välkommen {{username}}!",
@@ -129,6 +135,8 @@
   "input.email.placeholder": "E-post",
   "input.facebook.url.label": "Länk till din facebook profil",
   "input.facebook.url.placeholder": "Facebook profil",
+  "input.filter.users.label": "Sök",
+  "input.filter.users.placeholder": "Sök",
   "input.first.name.label": "Förnamn",
   "input.first.name.placeholder": "Förnamn",
   "input.frilans.terms.label": "Jag accepterar Frilans Finans anställningsvillkor",
@@ -181,6 +189,8 @@
   "input.skills.hint": "\nBedöm hur bra du är på de valda kompetenserna",
   "input.skills.label": "Kompetenser",
   "input.skills.placeholder": "Kompetenser",
+  "input.sort.users.label": "Sortera på",
+  "input.sort.users.placeholder": "Sortera på",
   "input.ssn.label": "Personnummer eller samordningsnummer",
   "input.ssn.placeholder":  "Personnummer eller samordningsnummer",
   "input.status.label": "Nuvarande status",
@@ -227,6 +237,7 @@
   "job.scope.section.header": "Omfattning",
   "job.scope.section.hours": "{{hours}} timmar",
   "job.scope.section.netSalary": "{{netSalary}} nettolön (efter skatt)",
+  "job.scope.section.until.further.notice": "Tillsvidare",
   "jobs.title": "Alla uppdrag ({{nbrOfJobs}})",
   "language.proficiency.basic": "Grundläggande kunskaper",
   "language.proficiency.beginner": "Nybörjare",
@@ -255,6 +266,7 @@
   "menu.main.contact": "Kontakt",
   "menu.main.faq": "Frågor och Svar",
   "menu.main.find_assignment": "Hitta uppdrag",
+  "menu.main.god.mode": "Gudläge",
   "menu.main.home": "Hem",
   "menu.main.login": "Logga in",
   "menu.main.logout": "Logga ut",
@@ -290,6 +302,7 @@
   "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "regler, villkor och anställningskontrakt",
+  "user.card.no.address": "Address saknas",
   "user.missing.traits.form.close.button": "Stäng",
   "user.missing.traits.form.information.provided.message.description": "Du har framgångsrikt ökat dina chanser att få jobb.",
   "user.missing.traits.form.information.provided.message.header": "Grymt jobbat!",
@@ -334,6 +347,8 @@
   "user.update.form.social.network.section.header": "Sociala nätverk",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Spara ändringar",
+  "users.filter.search.label": "Sök användare",
+  "users.filter.search.placeholder": "Sök användare",
   "validations.email_pattern": "måste se ut som en epostadress",
   "validations.maxlength": "är för lång (max {{maxLength}} tecken)",
   "validations.minlength": "är för kort (minst {{minLength}} tecken)",
