--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -1,4 +1,5 @@
 {
+  "god.mode.pager.section.no.users": "No users found",
   "already.registered.modal.button": "ننوتل",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -74,6 +75,11 @@
   "forgot.password.modal.title": "Restore password",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
+  "god.mode.bar.description": "God mode is active! In this mode you can see how the chosen user percieves the application and you may act on the users behalf. You are not allowed to change anything without the consent of the user you are acting as.",
+  "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
+  "god.mode.change.user.button": "Change user",
+  "god.mode.deactivate.button": "Deactivate",
+  "god.mode.title": "{{numberOfUsers}} Users",
   "home.header.logged.in.jobs.button": "د ګومارنې موندل",
   "home.header.logged.in.profile.button": "Edit profile",
   "home.header.logged.in.title": "Welcome {{username}}!",
@@ -129,6 +135,8 @@
   "input.email.placeholder": "بریښنالیک",
   "input.facebook.url.label": "Link to your facebook profile",
   "input.facebook.url.placeholder": "Facebook profile",
+  "input.filter.users.label": "Search by",
+  "input.filter.users.placeholder": "Search by",
   "input.first.name.label": "نوم",
   "input.first.name.placeholder": "نوم",
   "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
@@ -181,6 +189,8 @@
   "input.skills.hint": "Please rate how good you are at the chosen skills",
   "input.skills.label": "مهارتونه",
   "input.skills.placeholder": "مهارتونه",
+  "input.sort.users.label": "Sort on",
+  "input.sort.users.placeholder": "Sort on",
   "input.ssn.label": "Social security number or coordination number",
   "input.ssn.placeholder":  "Social security number or coordination number",
   "input.status.label": "Current status",
@@ -227,6 +237,7 @@
   "job.scope.section.header": "Scope",
   "job.scope.section.hours": "{{hours}} hours",
   "job.scope.section.netSalary": "{{netSalary}} net salary (after taxes)",
+  "job.scope.section.until.further.notice": "Until further notice",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
@@ -255,6 +266,7 @@
   "menu.main.contact": "اړیکه",
   "menu.main.faq": "پوښتنې او ځوابونه",
   "menu.main.find_assignment": "د ګومارنې موندل",
+  "menu.main.god.mode": "God mode",
   "menu.main.home": "Hem",
   "menu.main.login": "ننوتل",
   "menu.main.logout": "وتل",
@@ -290,6 +302,7 @@
   "support.chat.title": "Just Arrived (جسټ آرایوډ)",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "terms, conditions and employment contract",
+  "user.card.no.address": "No address",
   "user.missing.traits.form.close.button": "تړل",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
   "user.missing.traits.form.information.provided.message.header": "That is awesome!",
@@ -334,6 +347,8 @@
   "user.update.form.social.network.section.header": "Social networks",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Save changes",
+  "users.filter.search.label": "Search users",
+  "users.filter.search.placeholder": "Search users",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
