Pull translations from Transifex

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,8 +1,8 @@
 {
-  "god.mode.pager.section.no.users": "No users found",
+  "god.mode.pager.section.no.users": "المستخدم غير موجود",
   "already.registered.modal.button": "تسجيل الدخول",
-  "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
-  "already.registered.modal.title": "{{emailOrPhone}} is already registered",
+  "already.registered.modal.info": "يبدو أن هناك حسابا يستخدم {{emailOrPhone}}، لذا نقترح عليك تسجيل الدخول بدلا من ذلك. إذا نسيت كلمة المرور، فيمكنك إعادة تعيين كلمة المرور بالنقر على \"هل نسيت كلمة المرور؟\" في الاعلى",
+  "already.registered.modal.title": "{{emailOrPhone}} مسجل سابقاً",
   "applications.title": "جست أرايفد",
   "apply.for.job.form.message.section": "هل هناك لمور أخرى تريد معرفتها؟",
   "apply.for.job.form.submit.button": "التسجيل",
@@ -17,8 +17,8 @@
   "assignment.status.performed": "تم أداء الوظيفة",
   "assignment.status.user_company_hire": "الشركة ترغب في توظيفك",
   "assignment.status.you_hired": "لقد تم توظيفك",
-  "basic.chat.messages.empty": "No messages yet",
-  "basic.comments.empty": "No comments yet",
+  "basic.chat.messages.empty": "لا توجد رسائل حتى الآن",
+  "basic.comments.empty": "لا توجد تعليقات حتى الآن",
   "button.form.submit.fail": "توجد بعض الأخطاء، يُرجى مراجعتها أعلاه.",
   "button.form.submit.success": "تم بنجاح!",
   "card.document.upload.empty.documents": "فارغ",
@@ -75,11 +75,11 @@
   "forgot.password.modal.title": "استعادة كلمة المرور",
   "forgot.password.submit.error": "للأسف، تعذر إرسال رابط إعادة تعيين كلمة المرور.",
   "forgot.password.title": "استعادة كلمة المرور",
-  "god.mode.bar.description": "God mode is active! In this mode you can see how the chosen user percieves the application and you may act on the users behalf. You are not allowed to change anything without the consent of the user you are acting as.",
-  "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
-  "god.mode.change.user.button": "Change user",
-  "god.mode.deactivate.button": "Deactivate",
-  "god.mode.title": "{{numberOfUsers}} Users",
+  "god.mode.bar.description": "وضع السوبر نشط! في هذا الوضع يمكنك أن ترى كيف يختار المستخدم المختار التطبيق ويمكنك التصرف نيابة عن المستخدمين. لا يسمح لك بتغيير أي شيء دون موافقة المستخدم الذي تتصرف به.",
+  "god.mode.bar.title": "أنت تعمل بإسم  {{firstName}} {{lastName}} بالمعرف {{id}}!",
+  "god.mode.change.user.button": "تغيير المستخدم",
+  "god.mode.deactivate.button": "تعطيل",
+  "god.mode.title": "{{numberOfUsers}} مستخدمين",
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
   "home.header.logged.in.profile.button": "تحرير ملف التعريف",
   "home.header.logged.in.title": "مرحبًا {{username}}!",
@@ -113,9 +113,9 @@
   "input.apply.message.label": "رسائل اضافية",
   "input.apply.message.placeholder": "رسائل اضافية",
   "input.at.und.label": "هل لديك تصريح AT-UND؟ (مسموح بالعمل أثناء اللجوء)",
-  "input.bank.account.label": "Swedish bank account (clearing number + account number)",
-  "input.bank.account.placeholder": "Bank account",
-  "input.chat.message.placeholder": "Write a message",
+  "input.bank.account.label": "حساب مصرفي سويدي (رقم المقاصة + رقم الحساب)",
+  "input.bank.account.placeholder": "الحساب المصرفي",
+  "input.chat.message.placeholder": "اكتب رسالة",
   "input.city.label": "المدينة",
   "input.city.placeholder": "المدينة",
   "input.comment.placeholder": "أكتب تعليقك",
@@ -133,10 +133,10 @@
   "input.email.or.phone.label": "البريد الإلكتروني أو رقم الهاتف",
   "input.email.or.phone.placeholder": "البريد الإلكتروني أو رقم الهاتف",
   "input.email.placeholder": "بريد إلكتروني",
-  "input.facebook.url.label": "Link to your facebook profile",
-  "input.facebook.url.placeholder": "Facebook profile",
-  "input.filter.users.label": "Search by",
-  "input.filter.users.placeholder": "Search by",
+  "input.facebook.url.label": "رابط حسابك على فيسبوك",
+  "input.facebook.url.placeholder": "حساب فيسبوك",
+  "input.filter.users.label": "البحث عن طريق",
+  "input.filter.users.placeholder": "البحث عن طريق",
   "input.first.name.label": "الاسم الصغير",
   "input.first.name.placeholder": "الاسم الصغير",
   "input.frilans.terms.label": "أقبل بشروط وعقود عمل Frilans Finans .",
@@ -144,9 +144,9 @@
   "input.gender.label": "الجنس",
   "input.gender.placeholder": "الجنس",
   "input.got.coordination.number.label": "هل لديك رقم التنسيق (samordningsnummer)؟",
-  "input.interests.hint": "Please rate how interested you are in the chosen interests",
-  "input.interests.label": "Interests",
-  "input.interests.placeholder": "Interests",
+  "input.interests.hint": "يرجى تقييم مدى اهتمامك في الإهتمامات التي تم اختيارها",
+  "input.interests.label": "الإهتمامات",
+  "input.interests.placeholder": "الإهتمامات",
   "input.job.experience.label": "خبرة سنوات العمل",
   "input.job.experience.placeholder": "خبرة سنوات العمل",
   "input.languages.hint": "يرجى تقييم نفسك في أداء اللغات المختارة",
@@ -154,8 +154,8 @@
   "input.languages.placeholder": "معلومات لغوية",
   "input.last.name.label": "الاسم الأخير",
   "input.last.name.placeholder": "الاسم الأخير",
-  "input.linkedin.url.label": "Link to your linkedin profile",
-  "input.linkedin.url.placeholder": "Linkedin profile",
+  "input.linkedin.url.label": "رابط حسابك على لينكدان",
+  "input.linkedin.url.placeholder": "حساب لينكدان",
   "input.lma.card.description": "تحميل صورة من بطاقة LMA",
   "input.lma.card.header": "بطاقة LMA",
   "input.lma.card.label": "بطاقة LMA",
@@ -189,8 +189,8 @@
   "input.skills.hint": "يرجى تقييم نفسك في أداء المهارات المختارة",
   "input.skills.label": "كفاءات",
   "input.skills.placeholder": "كفاءات",
-  "input.sort.users.label": "Sort on",
-  "input.sort.users.placeholder": "Sort on",
+  "input.sort.users.label": "فرز على",
+  "input.sort.users.placeholder": "فرز على",
   "input.ssn.label": "رقم الضمان الاجتماعي أو رقم التنسيق",
   "input.ssn.placeholder":  "رقم الضمان الاجتماعي أو رقم التنسيق",
   "input.status.label": "الحالة الحالية",
@@ -214,7 +214,7 @@
   "job.actions.header.confirm": "قبول عرض",
   "job.actions.header.hired": "تمّ تعيينه",
   "job.actions.header.login": "تسجيل الدخول للتقدم للوظيفة",
-  "job.actions.header.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
+  "job.actions.header.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.header.performed": "تم أداء الوظيفة",
   "job.actions.header.register": "إنشاء حساب",
   "job.actions.section.applied": "قدّمت على الوظيفة",
@@ -222,7 +222,7 @@
   "job.actions.section.confirm": "قبول عرض",
   "job.actions.section.hired": "تمّ تعيينه",
   "job.actions.section.login": "تسجيل الدخول للتقدم للوظيفة",
-  "job.actions.section.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
+  "job.actions.section.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.section.performed": "تم أداء الوظيفة",
   "job.actions.section.register": "إنشاء حساب",
   "job.additional.user.info.modal.button": "أكمل",
@@ -231,13 +231,13 @@
   "job.card.hours": "{{hours}} الساعات",
   "job.comments.section.title": "تعليق",
   "job.description.section.header": "وصف",
-  "job.information.section.header": "Information",
-  "job.location.section.header": "Location",
-  "job.scope.section.grossSalary": "{{grossSalary}} gross salary (before taxes)",
-  "job.scope.section.header": "Scope",
+  "job.information.section.header": "معلومات",
+  "job.location.section.header": "الموقع",
+  "job.scope.section.grossSalary": "{{grossSalary}} الراتب الإجمالي (قبل الضريبة)",
+  "job.scope.section.header": "المجال",
   "job.scope.section.hours": "{{hours}} الساعات",
-  "job.scope.section.netSalary": "{{netSalary}} net salary (after taxes)",
-  "job.scope.section.until.further.notice": "Until further notice",
+  "job.scope.section.netSalary": "{{netSalary}} صافي الراتب (بعد الضريبة)",
+  "job.scope.section.until.further.notice": "حتى اشعار آخر",
   "jobs.title": "كل الوظائف ({{nbrOfJobs}})",
   "language.proficiency.basic": "معرفة أساسية ",
   "language.proficiency.beginner": "مبتدئ",
@@ -266,7 +266,7 @@
   "menu.main.contact": "اتصال",
   "menu.main.faq": "أسئلة وأجوبة",
   "menu.main.find_assignment": "إيجاد وظيفة",
-  "menu.main.god.mode": "God mode",
+  "menu.main.god.mode": "وضع السوبر",
   "menu.main.home": "منزل",
   "menu.main.login": "تسجيل الدخول",
   "menu.main.logout": "تسجيل الخروج",
@@ -274,7 +274,7 @@
   "menu.main.profile": "صفحة معلومات شخصية",
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "تقرير الوقت",
-  "menu.main.support.chat": "Chat with Just Arrived",
+  "menu.main.support.chat": "تحدث مع Just Arrived",
   "page.not.found.error.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
   "register.form.login.button": "قم بتسجيل الدخول الآن",
@@ -296,25 +296,25 @@
   "skill.proficiency.expert": "خبير ",
   "skill.proficiency.intermediate": "معرفة متوسطة ",
   "skill.proficiency.professional": "محترف ",
-  "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
-  "support.chat.info.message.header": "This is not an instant chat service",
-  "support.chat.page.title": "Chat with Just Arrived",
+  "support.chat.info.message.description": "يرجى العلم بأنه قد يستغرق الأمر ما يصل إلى 72 ساعة للحصول على رد",
+  "support.chat.info.message.header": "هذه ليست خدمة الدردشة الفورية",
+  "support.chat.page.title": "تحدث مع Just Arrived",
   "support.chat.title": "جست أرايفد",
   "terms.frilans_finans.accept": "أنا اوفق على Frilans Finans",
   "terms": "الشروط والأحكام وعقد العمل",
-  "user.card.no.address": "No address",
+  "user.card.no.address": "لا يوجد عنوان",
   "user.missing.traits.form.close.button": "أقفِل",
-  "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
-  "user.missing.traits.form.information.provided.message.header": "That is awesome!",
-  "user.missing.traits.form.submit.button": "Next",
-  "user.missing.traits.message.description": "Consider providing us with more information to increse your chances to get jobs",
-  "user.missing.traits.message.header": "We are interested in you",
+  "user.missing.traits.form.information.provided.message.description": "لقد نجحت في زيادة فرصك للحصول على وظائف.",
+  "user.missing.traits.form.information.provided.message.header": "هذا رائع!",
+  "user.missing.traits.form.submit.button": "التالي",
+  "user.missing.traits.message.description": "يرجى اعادة النظر في تزويدنا بمزيد من المعلومات لزيادة فرصك للحصول على وظائف",
+  "user.missing.traits.message.header": "نحن مهتمون بك",
   "user.profile.form.education.section.header": "دراسة",
   "user.profile.form.general.skills.section.header": "مهارات عامة",
-  "user.profile.form.interests.section.header": "Interests",
+  "user.profile.form.interests.section.header": "الإهتمامات",
   "user.profile.form.language.skills.section.header": "معلومات لغوية",
   "user.profile.form.personal.presentation.section.header": "تقديم",
-  "user.profile.form.social.network.section.header": "Social networks",
+  "user.profile.form.social.network.section.header": "شبكات التواصل الإجتماعي",
   "user.profile.form.status.section.header": "الوضع",
   "user.profile.form.submit.button": "حفظ تغييرات ملف التعريف",
   "user.profile.form.work.experience.section.header": "خبرة سنوات العمل",
@@ -339,16 +339,16 @@
   "user.update.form.bank.details.header": "معلومات مصرفية",
   "user.update.form.education.section.header": "دراسة",
   "user.update.form.general.skills.section.header": "مهارات عامة",
-  "user.update.form.interests.section.header": "Interests",
+  "user.update.form.interests.section.header": "الإهتمامات",
   "user.update.form.language.skills.section.header": "معلومات لغوية",
   "user.update.form.personal.info.header": "المعلومات الشخصية",
   "user.update.form.personal.presentation.section.header": "تقديم",
   "user.update.form.settings.header": "اِعدادات",
-  "user.update.form.social.network.section.header": "Social networks",
+  "user.update.form.social.network.section.header": "شبكات التواصل الإجتماعي ",
   "user.update.form.status.section.header": "الوضع",
   "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
-  "users.filter.search.label": "Search users",
-  "users.filter.search.placeholder": "Search users",
+  "users.filter.search.label": "البحث عن المستخدمين",
+  "users.filter.search.placeholder": "البحث عن المستخدمين ",
   "validations.email_pattern": "يجب أن يكون عنوان بريد الكتروني صحيح",
   "validations.maxlength": "طويل جدا (الحد الأقصى {{maxLength}} من الأحرف)",
   "validations.minlength": "قصير جدا (الحد الأدنى {{minLength}} من الأحرف)",
