--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -92,8 +92,8 @@
   "home.instructions.first.section.instruction1": "Apply for jobs near you",
   "home.instructions.first.section.instruction2": "Receive offer",
   "home.instructions.first.section.instruction3": "Accept offer",
-  "home.instructions.first.section.title": "This is how it works:",
-  "home.instructions.second.section.description": "In order to increase your chances getting a job:",
+  "home.instructions.first.section.title": "This is how it works",
+  "home.instructions.second.section.description": "In order to increase your chances getting a job",
   "home.instructions.second.section.instruction1": "Apply to all jobs that you like",
   "home.instructions.second.section.instruction2": "Fill out your profile",
   "home.instructions.second.section.instruction3": "Log in often and make sure your profile is up to date",
@@ -252,12 +252,12 @@
   "login.title": "Log in",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
-  "map.geolocation.error.close": "Click to hide.",
-  "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
-  "map.geolocation.error.positionUnavailable": "we are unable to determine your location.",
+  "map.geolocation.error.close": "Click to hide",
+  "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site",
+  "map.geolocation.error.positionUnavailable": "we are unable to determine your location",
   "map.geolocation.error.prefix": "Your location could not be established because {{mapError}}",
-  "map.geolocation.error.timeout": "service timeout has been reached.",
-  "map.geolocation.error.unsupportedBrowser": "your browser does not support location services.",
+  "map.geolocation.error.timeout": "service timeout has been reached",
+  "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "Go to job",
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
